# quarantine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: config.h  conn_q.c  conn_q.h  log.c  log.h  main.c  message.h  request.c  request.h  response.c  response.h  server.c  server.h  types.h  worker.c  worker.h
src/http/: header.h  request.c  request.h  response.c  response.h
